@@ -2,7 +2,7 @@
 # AgentTicketOverviewPreview.dtl - provides HTML Ticket Overview
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketOverviewPreview.dtl,v 1.44 2010-08-18 15:48:27 martin Exp $
+# $Id: AgentTicketOverviewPreview.dtl,v 1.45 2010-08-18 16:05:24 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -178,7 +178,24 @@
                             <div class="ActionRow">
                                 <ul class="Actions">
 <!-- dtl:block:ArticlePreviewActionRowItem -->
-                                    <li><a href="$Env{"Baselink"}$Data{"Link"}">$Text{"$Data{"Name"}"}</a></li>
+                                    <li class="$QData{"Class"}">
+                                        <form title="$Text{"$Data{"Name"}"}" action="$Env{"CGIHandle"}" method="get" id="$QData{"FormID"}">
+                                            <input type="hidden" name="Action" value="$QData{"Action"}"/>
+                                            <input type="hidden" name="TicketID" value="$QData{"TicketID"}"/>
+                                            <input type="hidden" name="ArticleID" value="$QData{"ArticleID"}"/>
+                                            <input type="hidden" name="ReplyAll" value="$QData{"ReplyAll"}"/>
+                                            <label for="ResponseID" class="InvisibleText">$Text{"$Data{"Name"}"}:</label>
+                                            $Data{"StandardResponsesStrg"}
+                                        </form>
+<!--dtl:js_on_document_complete-->
+<script type="text/javascript">//<![CDATA[
+    $('#$QData{"FormID"} select[name=ResponseID]').bind('change', function (Event) {
+        var url = Core.Config.Get('Baselink') + $(this).parents().serialize();
+        Core.UI.Popup.OpenPopup(url, 'Action');
+    });
+//]]></script>
+<!--dtl:js_on_document_complete-->
+                                    </li>
 <!-- dtl:block:ArticlePreviewActionRowItem -->
                                 </ul>
                                 <div class="ClearLeft"></div>
